Added test lang parsing, logger configured, added core part for models and parser

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     }
   },
   "require": {
-    "apache/log4php": "2.3.0"
+    "apache/log4php": "2.3.0",
+    "ext-json": "*",
+    "ext-pdo": "*"
   }
 }
