Fixed some errors, modified sql script, removed some restrictions, added user mentions, replies and retweets

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   "require": {
     "apache/log4php": "2.3.0",
     "ext-json": "*",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-pgsql": "*"
   }
 }
